--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
     />
-    <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/mainInfo.css" />
-    <link rel="stylesheet" href="styles/someText.css" />
-    <link rel="stylesheet" href="styles/price.css" />
-    <link rel="stylesheet" href="styles/formSection.css" />
-    <link rel="stylesheet" href="styles/footer.css" />
-    <link rel="stylesheet" href="styles/copyright.css" />
+    <link rel="stylesheet" href="styles/main/main.css" />
+    <link rel="stylesheet" href="styles/mainInfo/mainInfo.css" />
+    <link rel="stylesheet" href="styles//someText/someText.css" />
+    <link rel="stylesheet" href="styles/price/price.css" />
+    <link rel="stylesheet" href="styles/formSection/formSection.css" />
+    <link rel="stylesheet" href="styles/footer/footer.css" />
+    <link rel="stylesheet" href="styles/copyright/copyright.css" />
   </head>
 
   <body>
