--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
     />
-    <link rel="stylesheet" href="styles/main/main.css" />
+    <link rel="stylesheet" href="styles/base/base.css" />
     <link rel="stylesheet" href="styles/mainInfo/mainInfo.css" />
-    <link rel="stylesheet" href="styles//someText/someText.css" />
+    <link rel="stylesheet" href="styles/someText/someText.css" />
     <link rel="stylesheet" href="styles/price/price.css" />
     <link rel="stylesheet" href="styles/formSection/formSection.css" />
     <link rel="stylesheet" href="styles/footer/footer.css" />
